# 2026URC_LOCAL

./: .gitignore
src/lora_rover/: README.md  package.xml  setup.cfg  setup.py
src/lora_rover/launch/: rover_lora.launch.py
src/lora_rover/lora_rover/: lora_protocol.py  lora_rover_rx.py
src/lora_rover/resource/: lora_rover
src/nav2_urc_bringup/: CMakeLists.txt  package.xml
src/nav2_urc_bringup/example/: curved_path.py  simple_path.py
src/nav2_urc_bringup/launch/: rviz_launch.py  urc_bringup_launch.py  urc_navigation.py
src/nav2_urc_bringup/params/: urc_nav2_params.yaml
src/nav2_urc_bringup/rviz/: urc_nav2.rviz
src/urc_description/: CMakeLists.txt  package.xml
src/urc_description/config/: ekf_odom.yaml
src/urc_description/description/: robot_core.xacro
src/urc_description/launch/: localization.launch.py
src/urc_node/: package.xml  setup.cfg  setup.py
src/urc_node/config/: twist_mux.yaml
src/urc_node/launch/: drive_with_mux.launch.py
src/urc_node/urc_node/: urc_drive_controller.py
src/zed-ros2-wrapper/zed_components/src/zed_camera/src/: zed_camera_component_main.cpp
src/zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml  zed2.yaml
src/zed-ros2-wrapper/zed_wrapper/launch/: zed_camera.launch.py
