<?xml version="1.0"?>
<package format="3">
  <name>lora_rover</name>
  <version>0.2.0</version>
  <description>URC LoRa(E22) rover RX: E22 serial frames -> /cmd_vel_lora (+ /estop_lora)</description>
  <maintainer email="user@example.com">URC Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
