<?xml version="1.0"?>
<package format="3">
  <name>urc_node</name>
  <version>0.0.1</version>
  <description>URC robot control node package</description>

  <maintainer email="chldudwl1215@gmail.com">cyj</maintainer>  <!-- 여기에 당신의 이름을 넣으세요 -->
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

