<?xml version="1.0"?>
<package format="3">
  <name>urc_node</name>
  <version>0.0.1</version>
  <description>URC robot control node package</description>

  <maintainer email="mingu3830@gmail.com">cyj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>twist_mux</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

